# crosspoint-tools

./: .gitignore  Dockerfile  LICENSE  README.md  wrangler.jsonc
.firecrawl/: all-h.md  convert-builtin-fonts.md  crosspoint-font-commit.md  english-yaml.md  fontIds.md  fontconvert.md  settings-cpp.md  translations-list.md  verify-compression.md
.github/workflows/: build-custom-firmware.yml  build-firmware.yml  build-fonts.yml  build-unlocker-linux.yml
public/: admin.html  debug.html  early-access.html  fonts.html  index.html  insider.html  login.html  roadmap.html  unlocker.html
public/js/: buy-modal.js  cpfont-builder.js  download-modal.js  flasher.js  theme-builder.js
scripts/font-builder/: README.md  audit_default_fallback_coverage.py  fontconvert_sdcard.py
scripts/font-builder/default-fallback-fonts/: SOURCES.md
src/: builder.ts  index.ts  types.ts
unlocker-tool/: .env.local.example  .gitignore  Cargo.toml  INTEGRATION.md  README.md  RELEASING.md
unlocker-tool/.github/workflows/: build-linux.yml
unlocker-tool/app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
unlocker-tool/app/src/: App.tsx  api.ts  index.css  main.tsx  platform.ts  resumeInstall.ts  store.ts  types.ts  vite-env.d.ts
unlocker-tool/app/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
unlocker-tool/app/src-tauri/LaunchDaemons/: com.sofriendly.crosspoint.unlocker.helper.plist
unlocker-tool/app/src-tauri/capabilities/: default.json
unlocker-tool/app/src-tauri/icons/: icon.icns
unlocker-tool/app/src-tauri/src/: lib.rs  main.rs
unlocker-tool/app/src/components/: CheckForUpdatesLink.tsx  HelperDebugLog.tsx  SettingsModal.tsx  Shell.tsx  UpdateChecker.tsx  ui.tsx
unlocker-tool/app/src/screens/: Connect.tsx  Consent.tsx  DeviceAndRegion.tsx  Firmware.tsx  HelperGate.tsx  Live.tsx
unlocker-tool/app/src/stores/: settingsStore.ts  updateStore.ts
unlocker-tool/crates/unlocker-core/: Cargo.toml
unlocker-tool/crates/unlocker-core/src/: catalog.rs  cert.rs  dns.rs  helper.rs  http.rs  lib.rs  orchestrator.rs  runtime.rs  session.rs  transport.rs  types.rs
unlocker-tool/crates/unlocker-helper/: Cargo.toml  build.rs
unlocker-tool/crates/unlocker-helper/certs/: fullchain.pem
unlocker-tool/crates/unlocker-helper/src/: main.rs  proto.rs  servers.rs  state.rs
unlocker-tool/crates/unlocker-helper/src/ops/: linux.rs  macos.rs  mod.rs  windows.rs
unlocker-tool/firmware-patches/: README.md
unlocker-tool/scripts/: build-linux.sh  build-macos-dev.sh  build-macos.sh  build-windows.ps1  bump-version.sh  release.sh  sign-windows-artifact.ps1  test-linux-wifi.sh  upload-to-cloudflare-linux.sh  upload-to-cloudflare.ps1  upload-to-cloudflare.sh
unlocker-tool/workers/releases/: package-lock.json  package.json  tsconfig.json  wrangler.toml
unlocker-tool/workers/releases/src/: index.ts
