[package]
name = "unlocker-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "unlocker_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "unlocker-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
unlocker-core = { workspace = true }
uuid = { workspace = true }


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
